src/index.css
@import "tailwindcss";


:root {
  --text: #635f75;
  --bg: #fff;
  --blue: #0f2a5c;
  --purple: #6a3fd9;
  --pink: #c03acf;
  --red: #e9427a;
  --purple-bg: rgba(192, 58, 207, 0.12);
  --purple-border: rgba(106, 63, 217, 0.45);

  --sans: system-ui, 'Segoe UI', Roboto, sans-serif;

  font: 18px/145% var(--sans);
  letter-spacing: 0.18px;
  color-scheme: light dark;
  color: var(--text);
  background: var(--bg);
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  @media (max-width: 1024px) {
    font-size: 16px;
  }
}

@media (prefers-color-scheme: dark) {
  :root {
    --text: #9ca3af;
    --bg: #16171d;
    --blue: #0f2a5c;
    --purple: #6a3fd9;
    --pink: #c03acf;
    --red: #e9427a;
    --purple-bg: rgba(192, 58, 207, 0.16);
    --purple-border: rgba(233, 66, 122, 0.45);
  }

  #social .button-icon {
    filter: invert(1) brightness(2);
  }
}

#root {
  width: 1126px;
  max-width: 100%;
  margin: 0 auto;
  text-align: center;
  min-height: 100svh;
  display: flex;
  flex-direction: column;
  box-sizing: border-box;
}

